syntax = "proto3";

package com.road.yishi.proto.army;

message BaseCastleMsg {
  int32 id = 1;
  int32 mapId = 2;
  int32 posX = 3;
  int32 posY = 4;
  int32 templateId = 5;
  int32 type = 6;
  int32 occupyPlayerId = 7;
  string occupyPlayerName = 8;
  string occupyLeagueName = 9;
  int32 state = 10;
  int32 defenceLefttime = 11;
  string castleName = 12;
  int32 leftEnergy = 13;
  int32 grade = 14;
  bool isDefenceBuffer = 15;
  int32 vipCastleView = 16;
  int32 vipType = 17;
  int32 vipGrade = 18;
}
