syntax = "proto3";

package com.road.yishi.proto.campaign;

message BufferInfoMsg {
  int32 bufferTempId = 1;
  int32 leftTime = 2;
}
