syntax = "proto3";

package com.road.yishi.proto.item;

message ItemBufferRspMsg {
  repeated int32 bufferData = 1;
}
