syntax = "proto3";

package com.road.yishi.proto.player;

message EffectRemoveReqMsg {
  int32 templateId = 1;
}
